--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This repository contains all the material used for the talk about Titanium Mobile module development I gave on 20/05/2011 at the WHYMCA Italian Mobile Developer Conference. The presentation is still in italian, but I will soon translate it to english. Stay tuned.
+
+All the code in this repository is released under the MIT license, while the presentation is distributed under the creative commons license (http://creativecommons.org/licenses/by-sa/3.0/).
